# Post-Quantum-SMR

./: README.md  narwhal-tusk.code-workspace
benchmark/: README.md  fabfile.py  ip_file  pub  pub1  pub2  pub3  pub4  sec1  sec2  sec3  sec4  settings.json
benchmark/benchmark/: commands.py  config.py  instance.py  local.py  logs.py  remote.py  settings.py  utils.py
benchmark/pq_results/dilithium/: bench-0-16-1-True-120000-256.txt  bench-0-16-1-True-130000-256.txt  bench-0-16-1-True-140000-256.txt  bench-0-16-1-True-150000-256.txt  bench-0-16-1-True-160000-256.txt  bench-0-16-1-True-180000-256.txt  bench-0-16-1-True-20000-256.txt  (+2 more)
benchmark/pq_results/dilithium-40-Glow/: bench-0-40-1-True-1-256.txt  bench-0-40-1-True-100000-256.txt  bench-0-40-1-True-120000-256.txt  bench-0-40-1-True-140000-256.txt  bench-0-40-1-True-160000-256.txt  bench-0-40-1-True-20000-256.txt  bench-0-40-1-True-40000-256.txt  bench-0-40-1-True-80000-256.txt
benchmark/pq_results/dilithium-40-HashRand/: bench-0-40-1-True-100000-256.txt  bench-0-40-1-True-120000-256.txt  bench-0-40-1-True-140000-256.txt  bench-0-40-1-True-160000-256.txt  bench-0-40-1-True-20000-256.txt  bench-0-40-1-True-40000-256.txt  bench-0-40-1-True-80000-256.txt
benchmark/pq_results/dilithium-64-HashRand/: bench-0-64-1-True-1-256.txt  bench-0-64-1-True-20000-256.txt  bench-0-64-1-True-40000-256.txt  bench-0-64-1-True-50000-256.txt  bench-0-64-1-True-60000-256.txt  bench-0-64-1-True-80000-256.txt
benchmark/pq_results/dilithium-64-glow/: bench-0-64-1-True-20000-256.txt  bench-0-64-1-True-40000-256.txt  bench-0-64-1-True-5000-256.txt  bench-0-64-1-True-50000-256.txt  bench-0-64-1-True-60000-256.txt  bench-0-64-1-True-80000-256.txt
config/: Cargo.toml
config/src/: lib.rs
consensus/: Cargo.toml
consensus/src/: lib.rs
consensus/src/tests/: consensus_tests.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
node/: Cargo.toml
node/src/: main.rs
primary/: Cargo.toml
primary/src/: aggregators.rs  core.rs  error.rs  header_waiter.rs  helper.rs  messages.rs  payload_receiver.rs  primary.rs  proposer.rs  synchronizer.rs
worker/src/: batch_maker.rs  helper.rs  processor.rs  synchronizer.rs  worker.rs
(+33 files in other folders)
