[package]
name = "consensus"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["sync"] }
log = "0.4.14"

crypto = { path = "../crypto" }
config = { path = "../config" }
primary = { path = "../primary" }

hashrand = { package = "hashrand", git = "https://github.com/akhilsb/async-cc-hash.git" }
glow_lib = { package = "glow_lib", git = "https://github.com/akhilsb/async-cc-hash.git" }
hnode = { package = "config", git = "https://github.com/akhilsb/async-cc-hash.git" }
anyhow = "1"
signal-hook = "0"

[dev-dependencies]
rand = "0.7.3"

[features]
benchmark = []
